packages/fortifier-macros/tests/validations/email-address/invalid_minimum_sub_domains_fail.rs
use fortifier::Validate;

#[derive(Validate)]
struct EmailAddressData<'a> {
    #[validate(email_address(minimum_sub_domains = -1))]
    value: &'a str,
}

fn main() {}
